# tjm-interview

./: .env.example  .gitignore  README.md  pyproject.toml
config/: app.toml
config/targets/: notepad.toml
grounding_algorithm/: __init__.py  __main__.py  screenseeker.py
src/tjm_automation/: __init__.py  __main__.py  cli.py  main.py
src/tjm_automation/automation/: __init__.py  desktop.py  runner.py
src/tjm_automation/core/: __init__.py  errors.py  logging.py  models.py  retry.py  settings.py
src/tjm_automation/grounding/: __init__.py  base.py  debug.py  pipeline.py  types.py
src/tjm_automation/grounding/backends/: __init__.py  vision_llm.py
src/tjm_automation/integrations/: __init__.py  posts_api.py  storage.py
src/tjm_automation/targets/: __init__.py  notepad.py
tjm_automation/: __init__.py  __main__.py
